Adjustments from last commit
Did not prompt for commit message on last commit so here are the changes:

Added paragraph to table
Added placeholder logo above title text
Added next section using table element

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </table>
         <!--===== End of top container =====-->
 
-
+                <table></table>
             </td>
         </tr>
     </table>
